local_modules/tree-sitter-sbjson/corpus/main.txt
===================
Arrays
===================

[
  345,
  10.1,
  10,
  -10,
  null,
  true,
  false,
  { "stuff": "good" }
]

---

(document (array
  (number)
  (number)
  (number)
  (number)
  (null)
  (true)
  (false)
  (object (pair (key (string)) (string)))))

=====================
String content
=====================

[
  "",
  "abc",
  "def\n",
  "ghi\t",
  "jkl\f"
]

----

(document
  (array
    (string)
    (string)
    (string (escape_sequence))
    (string (escape_sequence))
    (string (bad_escape_sequence))))

================================
Top-level numbers
================================

-1

---

(document (number))

================================
Top-level null
================================

null

---

(document (null))
